--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'QP'
 - !lcsh 'Sleep -- Physiological aspects'
 - !lcsh 'Sleep disorders'
+- GITenberg
 title: Sleep and Its Derangements
 url: http://www.gutenberg.org/ebooks/43887
